# scrumWorkbench

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: pull_requests.yml
backend/: pyproject.toml
backend/app/: decks.py  decks_test.py  dependencies.py  exceptions.py  main.py
backend/app/models/: deck.py  deck_test.py  rooms.py  rooms_test.py
backend/app/routers/: rooms.py  rooms_test.py
backend/app/schemas/: room.py
backend/app/services/: room_service.py  room_service_test.py
backend/app/testing/: builder.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
